2012-01-13
* further preprocess strings that go into the database. Specifically we split
on strings that 'strings' will split on when reading a binary file

2012-01-10
* don't run leaf scans on duplicate files. Instead run the scans just once and
recombine the results later.

2012-01-09
* don't unnecessarily run program scans and postrun scans if none are defined
in the configuration
* only pass the configuration of the program scans to the program scans. This
can save a lot of memory for big runs.

2012-01-04
* add infrastructure for postrun scans

2012-01-03
* parallellise unpacking. Hardcoded to 1 worker for now.
* big file improvements for lzip, lzo and 7z unpacking

2012-01-01
* change copyright statements
* extract strings from JavaScript files too
* sort scans for leafs first, so big files are scanned first
* send tasks to the pool in chunks of size 1, so each process in the worker
pool runs for roughly the same time.
* fix an error in the ranking code, which significantly speeds up the
algorithm...again
* tag bz2 and gzip files

2011-12-31
* parallellise leafscans. Especially when ranking is enabled this pays off a
lot and shaves off another 30% of runtime (even more if caches are hot). It
seems to be faster even when there is only one worker process in the pool. There
is one caveat: this will only work correctly if the caching database for the
ranking scan has been *FULLY* generated, or else it will try to write to the
database, which could lead to errors. The default process is therefore
hardcoded to 1, but this will be made configurable in the near future.

2011-12-28
* for some ext4 file systems tune2fs needs 8192 bytes to run correctly
2011-12-27
* unpack scans also can return tags

2011-12-25
* select scans based on the actual offsets that were found. Also make sure
that scans for which magic was found at offset 0 are tried first.

2011-12-24
* add a very simple verifyGraphics pre-run scan. Right now it only verifies if
a file is a JPEG file.